app/assets/stylesheets/application.css.sass
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 */

@import 'button_animations'

$body-bg: lighten(#D4C6C2, 14%)
$gray-base: #0B1C26
$brand-primary: #1F5E75
// $btn-info-color: #0B1C26
$btn-info-bg: lighten($gray-base, 20%)

////////////////////////////////////
// variales for animated buttons //
//////////////////////////////////
$color-bg: $body-bg
$color-btn: lighten($body-bg, 50%)
//////////////////////////////////

@import "bootstrap-sprockets"
@import "bootstrap"

.logo-and-navigation
  width: 800px
  margin: 0 auto

.my-form-group
  margin: 0 auto
  width: 400px

html.turbolinks-progress-bar::before
  background-color: lighten($gray-base, 30%) !important
  height: 3px !important

.user-button
  padding: 10px 20px 10px 20px
  position: relative
  top: 10px
  right: 10px
  font-size: 1.5em

.knewave
  font-family: 'Knewave', cursive

.jumbotron 
  h1
    font-size: 8em
    margin: 0
  h3
    margin: 0

.container
  width: 770px

.board
  width: 400px
  min-height: 150px
  margin: 15px auto
  padding: 0 30px
  border-radius: 60px
  border: 5px solid lighten($gray-base, 65%)
  background-color: lighten($gray-base, 10%)
  transition: all 200ms
  color: lighten($gray-base, 20%)
  &:hover
    background-color: lighten($gray-base, 75%)
    border: 5px solid lighten($gray-base, 20%)
    .board-name-description
      transition: all 300ms
      transform: scale(1.2)
      color: lighten($gray-base, 20%)
    .board-name-description:hover
      color: lighten($gray-base, 10%)
      text-shadow: 0px 0px 1px #fff
  a
    text-decoration: none

.board-name-description
  color: lighten($gray-base, 50%)

.board-buttons
  padding: 15px 0
  opacity: 0.3

.board-highlight
  position: relative
  color: lighten($gray-base, 65%)
  background-color: lighten($gray-base, 10%)
  padding: 10px 15px 15px 15px
  border-radius: 10px

.new-list-button
  position: absolute
  right: 0
  top: -59px

.big-opacity
  opacity: 0.5

.list-box
  box-sizing: border-box
  width: 360px
  min-height: 100px
  margin: 10px
  border: 3px solid lighten($gray-base, 20%)
  border-radius: 10px
  float: left
  h4
    background-color: lighten($gray-base, 20%)
    color: lighten($gray-base, 80%)

.list-form
  width: 300px
  margin: 0 auto
  display: none

.hidden-list-form
  display: none

.container-for-lists
  position: absolute
  top: 370px
  left: 0
  min-width: 3000px
  .list-box
    float: left

.card-form-button
  display: block
  margin: 10px auto

.alert
  position: absolute
  top: 0
  left: 0
  width: 100%
  z-index: 99
  text-align: center
  li
    list-style-type: none

.list-box
  h4
    margin-top: 15px
    height: 35px
    line-height: 35px

